deploy/resources/policy/istio/canary/vs.100-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-vs
  namespace: development
spec:
  gateways:
    - demo-gateway
  hosts:
  - "api.demo"
  http:
  - route:
    - destination:
        host: demo-microservice.development.svc.cluster.local
        subset: v1
        port:
          number: 8080
      weight: 100
    corsPolicy:
      allowOrigin:
      - "*"
      allowMethods:
      - GET
